SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/PO_Item_To_Budget_Item_Link__c.object-meta.xml
<CustomObject>
    <description>This object is a junction object between PO Item and Budget item. It will roll up all the Contract Item level amount at budget Item level</description>
    <label>PO Item To Budget Item Link</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Item To Budget Item Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>