SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/Approved_PO__c.field-meta.xml
<CustomField>
    <fullName>Approved_PO__c</fullName>
    <description>Approved PO</description>
    <label>Approved PO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>