SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/New_PO__c.field-meta.xml
<CustomField>
    <fullName>New_PO__c</fullName>
    <description>New PO Amount</description>
    <label>New PO</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>