SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/Pending_PO__c.field-meta.xml
<CustomField>
    <fullName>Pending_PO__c</fullName>
    <description>Pending PO</description>
    <label>Pending PO</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>