SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/Pending_PO_Formula__c.field-meta.xml
<CustomField>
    <fullName>Pending_PO_Formula__c</fullName>
    <formula>IF( TEXT(PO_Item__r.Purchase_Order__r.Status__c) == &apos;Pending&apos;, PO_Item__r.Total_Price__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending PO Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>