SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/PO_Item__c.field-meta.xml
<CustomField>
    <fullName>PO_Item__c</fullName>
    <label>BT Purchase Order Item</label>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipName>Budget_Item_To_PO_Item_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>