SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/Total_PO__c.field-meta.xml
<CustomField>
    <fullName>Total_PO__c</fullName>
    <description>Total PO Amount</description>
    <label>Total PO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>