SubBt/force-app/main/default/objects/PO_Item_To_Budget_Item_Link__c/fields/Total_PO_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_PO_Formula__c</fullName>
    <formula>PO_Item__r.Total_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PO Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>